Fixed radio button align issue

--- a/Audit/src/pages/NoPage/NoPage.css
+++ b/Audit/src/pages/NoPage/NoPage.css
@@ -1,4 +1,4 @@
-div {
+.no-page {
     width: 100%;
     text-align: center;
 }
